--- a/internship.html
+++ b/internship.html
@@ -45,7 +45,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/lamudi/6ffde701-f3fc-4071-a9c1-ac79d3bdaf85'>Lamudi - BUSINESS DEVELOPMENT INTERN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lamudi/6ffde701-f3fc-4071-a9c1-ac79d3bdaf85'>Lamudi - BUSINESS DEVELOPMENT INTERN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -215,7 +215,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://itron.referrals.selectminds.com/jobs/r-d-intern-hardware-design-engineering-2679'>R/D Intern - Hardware Design Engineering - Itron Careers</a></h5> 
+<h5><a href='https://itron.referrals.selectminds.com/jobs/r-d-intern-hardware-design-engineering-2679'>R/D Intern - Hardware Design Engineering - Itron Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -333,7 +333,7 @@
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qWGaVfwr&k=Job&j=ookn9fwY&__jvst=Employee+Referral&__jvsd=soNIKhwp&__jvsc=Twitter&bid=n2GOVLwH'>Selina Careers - Hospitality Operations (Internship Opportunity)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qWGaVfwr&k=Job&j=ookn9fwY&__jvst=Employee+Referral&__jvsd=soNIKhwp&__jvsc=Twitter&bid=n2GOVLwH'>Selina Careers - Hospitality Operations (Internship Opportunity)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
@@ -390,7 +390,7 @@ will be providing reception coverage including processing telephone calls,?...</
 <p><span class="badge badge-light">Berlin, DE</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4315485002'>Job Application for Internship in IT Support at Wayfair</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4315485002'>Job Application for Internship in IT Support at Wayfair</a></h5> 
 <p><span class="badge badge-light">Berlin, DE</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -439,7 +439,7 @@ Rocket Internet) in Berlin (published: 19.03.2019). Apply now or check the?...</
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://stantec.referrals.selectminds.com/jobs/engineering-intern-transportation-6006'>Engineering Intern, Transportation - Stantec Careers</a></h5> 
+<h5><a href='https://stantec.referrals.selectminds.com/jobs/engineering-intern-transportation-6006'>Engineering Intern, Transportation - Stantec Careers</a></h5> 
 <p><span class="badge badge-light">Ottawa, Ontario</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
